--- a/Module 4/index.html
+++ b/Module 4/index.html
@@ -8,6 +8,12 @@
 <body>
     <script src="script.js">
     </script>
+    
+      <script src="SpeakHello.js">
+    </script>
+    
+      <script src="SpeakGoodBye.js">
+    </script>
 
 </body>
 
