--- a/Module 4/index.html
+++ b/Module 4/index.html
@@ -14,6 +14,9 @@
     
       <script src="SpeakGoodBye.js">
     </script>
+    
+    <h1>
+        <a href= https://github.com/melissacastillo14/melissacastillo14.github.io/tree/main/Module%204> Click Here to go to Repository </a> </h1>
 
 </body>
 
